app/styles/_application.scss
.guide {
  height: 100%;
  @include display(flex);
  @include flex-direction(row);
  font-family: 'Roboto', sans-serif;
}

.guide .frost-button,
.guide .frost-link {
  font-family: 'Roboto', sans-serif;
}

.guide-sidebar {
  height: 100vh;
  width: 220px;
  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
  > .liquid-child {
    height: 100%;
    > .content {
      width: 100%;
      height: 100%;
      background-color: $frost-color-white;
    }
    > .content.media-desktop {
      width: 250px;
    }
  }
}

.content-col .confluence-embedded-image {
  max-width: 100%;
}

img {
  max-width: 100%;
}

.guide-sidebar-mobile {
  position: absolute;
  height: 100%;
  z-index: 2;
  background-color: $frost-color-white;
}

.guide-content {
  position: relative;
  z-index: 1;
  @include flex(1);
  @include display(flex);
  @include flex-direction(column);
}

.guide-content .frost-info-bar.frost-guide {
  background-color: $frost-color-blue-1;
  min-height: 90px;
  min-width: 400px;
}

.footer,
.push {
  clear: both;
}

.guide-content .frost-info-bar .frost-guide .title .primary-title {
  color: $frost-color-white;
}

.guide-content .frost-info-bar .title .frost-guide .sub-title {
  color: $frost-color-white;
  font-size: 90%;
  text-transform: capitalize;
}

.guide-content .frost-info-bar .frost-guide .action .frost-select {
  width: 100px;
}

.guide-content > .frost-scroll {
  @include flex(1);
}

.guide-content .content-col {
  padding-bottom: 20px;
  min-width: 400px;
  max-width: 1000px;
}

.md {
  float: left;
  width: 100%;
  font-size: 16px;
}

@media (max-width: 600px) {
  .md .content-col {
    width: 100%;
  }
}

.md .content-col {
  float: left;
  width: 65%;
  min-width: 400px;
  line-height: 1.7;
}

.md .tab-nav ~ #description {
  min-width: 400px;
  max-width: 65%;
  line-height: 1.7;
}
.md .tab-nav ~ #api {
  min-width: 400px;
  max-width: 65%;
  line-height: 1.7;
}

.md .tab-nav ~ #demo {
  min-width: 400px;
  max-width: 100%;
}

.guide-content .guide-markdown {
  width: 100%;
  padding-left: 20px;
  padding-right: 20px;
}

pre[class*="language-"]:before,
pre[class*="language-"]:after {
    display: none;
}

.guide-content #demo .frost-application-bar{
  position: relative !important;
}

.guide-content #demo .frost-application-bar + .liquid-modal .liquid-child .lm-container{
  position: absolute !important;
}

.guide-content #demo .frost-application-bar + .liquid-modal .liquid-child .lm-container + .lf-overlay{
  position: absolute !important;
}

@media screen and (-ms-high-contrast: active),
(-ms-high-contrast: none) {
  /* IE10+ specific styles go here */
  .guide-content #demo {
    overflow-x: visible;
  }
}

.tabs__bar--justified {
  margin-top: 3px;
}

.guide.media-mobile {}

.breadcrumbs {
  padding-left: 0;
  list-style: none;
}

.breadcrumb-item {
  color: $frost-color-white;
  &:nth-child(1) {
    display: inline-block;
    margin-bottom: 10px;
    font-size: $frost-font-s;
  }
  &:nth-child(2) {
    display: inline-block;
    margin: 0 0 10px 10px;
    padding-left: 10px;
    border-left: 1px solid $frost-color-lgrey-2;
    font-size: $frost-font-s;
  }
  &:last-child {
    display: block;
    margin: 0 0 20px 0;
    padding: 0;
    border: none;
    font-size: $frost-font-xl;
  }
}

.frost-tabs--active {
  min-height: 500px;
}

.frost-button > .text {
  min-width: 0px !important;
}

.frost-link {
  text-align: left !important;
}

td, th {
    padding-right: 10px;
    text-align: left;
}
/*
Max width before this PARTICULAR table gets nasty
This query will take effect for any screen smaller than 760px
and also iPads specifically.
*/

@media only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px) {
  .guide-content .guide-markdown {
    overflow-x: auto;
  }
}

#api h1:first-child {
  margin-top: -40px;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
}

